--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,11 @@
     "@neondatabase/serverless": "github:neondatabase/serverless",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-validator": "^7.2.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.4",
     "ts-node": "^10.9.2",
